# robotic-arm-kinematics

./: README.md
my_robot_arm/: CMakeLists.txt  package.xml
my_robot_arm/launch/: display.launch.py
my_robot_arm/urdf/: my_robot_arm.urdf.xacro
my_robot_arm_control/: package.xml  setup.py
my_robot_arm_control/my_robot_arm_control/: move_to_pose.py
my_robot_arm_moveit_config/: CMakeLists.txt  package.xml
my_robot_arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  my_robot_arm.srdf  ompl_planning.yaml  ros2_controllers.yaml
my_robot_arm_moveit_config/launch/: moveit.launch.py
