<?xml version="1.0"?>
<package format="3">
  <name>my_robot_arm_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt config for my_robot_arm</description>
  <maintainer email="enovo@todo.todo">enovo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>my_robot_arm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
